--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "debugger": "cross-env NODE_ENV=development nodemon  --watch ./src -e  ts,tsx  --exec node --inspect -r ts-node/register  ./src/test.ts",
     "build": "cross-env NODE_ENV=production webpack",
     "buildTest": "cross-env NODE_ENV=dev webpack",
-    "start": "ts-node index.ts"
+    "start": "ts-node index.ts",
+    "migrate": "npx prisma migrate dev --name init",
+    "generate": "npx prisma generate",
+    "deploy": "npm run migrate && npm run generate"
   },
   "keywords": [
     "Ethereum",
@@ -26,7 +29,7 @@
   "license": "ISC",
   "dependencies": {
     "@ethersproject/solidity": "^5.7.0",
-    "@prisma/client": "^5.17.0",
+    "@prisma/client": "^5.18.0",
     "@types/node-telegram-bot-api": "^0.61.6",
     "@uniswap/sdk": "^3.0.3",
     "@uniswap/sdk-core": "^3.2.2",
@@ -55,7 +58,7 @@
     "externals-dependencies": "^1.0.4",
     "javascript-obfuscator": "^4.0.2",
     "path": "^0.12.7",
-    "prisma": "^5.17.0",
+    "prisma": "^5.18.0",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
