--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dandao",
+  "name": "APEBOT",
   "version": "1.0.0",
   "description": "Ape Store Trading Telegram Bot",
   "main": "build/main.js",
